--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>spring-context</artifactId>
             <version>5.1.14.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.1.14.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
